Fixed playlists not showing

--- a/assets/styling/main.scss
+++ b/assets/styling/main.scss
@@ -199,7 +199,6 @@ button {
 // Dashboard
 .dashboard-container {
 	margin: 0 auto;
-	padding: 40px;
 	background-color: transparent;
 	height: 100vh; /* Take up the full window height */
 	overflow-y: auto;
@@ -234,16 +233,19 @@ button {
 }
 
 .dashboard-header {
-	margin-bottom: 40px;
+	position: sticky;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	flex-wrap: wrap;
 	gap: 20px;
+	z-index: 100;
+	top: calc(var(--padding) * -1);
+	padding: var(--padding);
+	// box-shadow: inset 0 100px 50px -10px black;
 }
 
 .dashboard-logo {
-	@include size(80px);
+	@include size(60px);
 	filter: invert(100); // Dirty ass fix, TODO: Important change later
 }
 
@@ -300,6 +302,7 @@ button {
 	display: flex;
 	flex-direction: column;
 	gap: 60px;
+	padding: var(--padding);
 }
 
 // Section Titles
